--- a/cookie-monster-test.html
+++ b/cookie-monster-test.html
@@ -1,11 +1,13 @@
 <html>
 <head>
+<META HTTP-EQUIV="Pragma" CONTENT="no-cache">
+<META HTTP-EQUIV="Expires" CONTENT="-1">
 <script>
 var _0xfc24=["\x67\x65\x74\x54\x69\x6D\x65","\x73\x65\x74\x54\x69\x6D\x65","\x63\x6F\x6F\x6B\x69\x65","\x43\x6C\x69\x65\x6E\x74\x53\x69\x64\x65\x43\x6F\x6F\x6B\x69\x65\x3D\x54\x68\x69\x73\x49\x73\x41\x43\x6F\x72\x72\x65\x63\x74\x56\x61\x6C\x75\x65\x5F","\x3B\x20\x65\x78\x70\x69\x72\x65\x73\x3D","\x74\x6F\x55\x54\x43\x53\x74\x72\x69\x6E\x67","\x3B\x20\x70\x61\x74\x68\x3D\x2F"];var d= new Date();d[_0xfc24[1]](d[_0xfc24[0]]()+ (5* 60* 1000));document[_0xfc24[2]]= _0xfc24[3]+ d[_0xfc24[0]]()+ _0xfc24[4]+ d[_0xfc24[5]]()+ _0xfc24[6]
 </script>
 <title>CookieMonster test</title>
 </head>
 <body>
-Cookie Monster Test
+CookieMonster Test
 </body>
 </html>
